WIP: Finished contracts and deployments, getting started on tests

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ test-reports/*
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# Claude
+.claude
+CLAUDE.md
+ClaudeExamples
